third_party/move/move-compiler-v2/tests/checking/specs/behavior_predicates_parse_err.exp

Diagnostics:
error: unexpected token
   ┌─ tests/checking/specs/behavior_predicates_parse_err.move:11:30
   │
11 │         ensures requires_of<f(x, y);
   │                              ^
   │                              │
   │                              Unexpected '('
   │                              Expected '>'
